# SMFAPAC

./: CMakeLists.txt  README  README.md
doc/testcases/1xv4/: 1xv4_1.xyz  1xv4_2.xyz  OUT_SMFA_1xv4_1_Level3
doc/testcases/Freq/: FREQUENCIES  NORMAL_MODES  OUT_SMFA  SPECTRUM  combDipDerivs  combinedderivs  optMP2L3dtol1.1c-cyclotridecene.xyz
doc/testcases/Freq/deuterated/: FREQUENCIES_d2  NORMAL_MODES_d2  SPECTRUM_d2
doc/testcases/MOGQOO/: MOGQOO.xyz  MOGQOO.xyz.inchi  MOGQOO.xyz.lhs.coords  MOGQOO.xyz.lhs.inchi  MOGQOO.xyz.rhs.coeff  MOGQOO.xyz.rhs.coords  MOGQOO.xyz.rhs.inchi  OUT_SMFA  seefrags  seefrags.inchi
doc/testcases/MOGQOO_minus_TAXYIA/: MOGQOO.xyz-TAXYIA.xyz.lhs.coeff  MOGQOO.xyz-TAXYIA.xyz.lhs.coords  MOGQOO.xyz-TAXYIA.xyz.lhs.inchi  MOGQOO.xyz-TAXYIA.xyz.rhs.coeff  MOGQOO.xyz-TAXYIA.xyz.rhs.coords  MOGQOO.xyz-TAXYIA.xyz.rhs.inchi  OUT_SMFA
doc/testcases/TAXYIA/: OUT_SMFA  TAXYIA.xyz  TAXYIA.xyz.inchi  TAXYIA.xyz.lhs.coords  TAXYIA.xyz.lhs.inchi  TAXYIA.xyz.rhs.coeff  TAXYIA.xyz.rhs.coords  TAXYIA.xyz.rhs.inchi  seefrags  seefrags.inchi
doc/testcases/TS/: CONVERGEDCOORDS  OUT_SMFA  optout  step4.xyz
doc/testcases/Taber2_min/: 12stepsNewcoords.xyz  CONVERGEDCOORDS  OUT_SMFA  OUT_SMFA_12steps  optout  qch1.o5571554_12steps  qch1.o5586005  starting.xyz
doc/testcases/addHatoms/: 2mvh_1_corrected.xyz  2mvh_1_original.xyz  OUT_SMFA
doc/testcases/c-cyclotridecene/: OUT_SMFA  R389225-3d.xyz  combinedderivs
doc/testcases/hyperpolarizability/: OUT_SMFA_GAU_HF
doc/testcases/inputchecks/5ce4/: 5ce4.xyz  OUT_SMFA
doc/testcases/polarizability/: OUT_SMFA_GAU_HF  OUT_SMFA_GAU_MP2  OUT_SMFA_QCH_HF  OUT_SMFA_QCH_MP2
doc/testcases/solventsurface/: 5tlr_1.xyz  OUT_SMFA  SOLACCSURFACE
src/: CMakeLists.txt
src/Atommoments/: CMakeLists.txt  momentcomb.f  momentheader.f90  readdata.f  readfrag.f  readsigns.f
src/DipoleDerivatives/: CMakeLists.txt  derivcomb.f  derivheader.f90  readdata.f  readfrag.f  readsigns.f
src/Dispersion/: CMakeLists.txt  Disp.f
src/Doublecount/: CMakeLists.txt  Tfactorfast.f  ct0c_d.f  ct3o_d.f  ct4h.f  ct4h_d.f  dt2d.f  dt2d_d.f  dt3q.f  dt3q_d.f  dt4o.f  elect.f  nbelect_Mac.f  qt4q_d.f  symm.f  zero.f
src/Electro_Mac/: CMakeLists.txt  ct1d.f  ct1d_d.f  ct2q.f  ct2q_d.f  ct3o.f  dt4o_d.f  elect.f  nbelect_Mac.f  qt4q.f  zero.f
src/Induction_Mac/: CMakeLists.txt  Tfactor2.f  atomicnumber.f  filelabel.f  fld.f  induction.f  readfamilies.f  readgroupdata.f  readmoments.f
src/L1L1_smfa/: AtNum.f  CMakeLists.txt  L1L1_Mac.f  Level2exclude.f  VdW.f  anum2vdw.f  cancelL1.f  cancelL1L1.f  case1.inc  case10.inc  case11.inc  case12.inc  case13.inc  case2.inc  case3.inc  case4.inc  case5.inc  case6.inc  case7.inc  case8.inc  case9.inc  dalton_files_Mac.f90  distmin.f  intring.f  match_mg.f  molecule_adt.f90  piksrt.f  printdaltons.f  writeL1atoms.f  writeabfiles.f  writenbfiles.f  writepolar.f
src/RogerOptimiser/: CMakeLists.txt  constraints.f  dangle.f  dbond.f  ddihed.f  hesaugTS.f  optimiser.f  tsvector.f
src/SolAccSurf/: CMakeLists.txt  SolAccSurface.f  makecube.f
src/cutbonds/: CMakeLists.txt  bigfract.f  breakgroup.f  cancel.f  checkbonds.f  compress.f  eight.f  expand.f  extrasubs.f  families.f  filelabel.f  finalcancel.f  findfragelim.f  five.f  four.f  fractdata.f90  fragsteps.f  makefrag.f  readINFRACT.f  readin_big.f  setupfrags1.f  seven.f  shrink.f  six.f  three.f  writecom.f  writefrags.f  writerawdata.f
src/derivatives_vard/: CMakeLists.txt  anum2alab.f  derivcomb.f  derivheader.f90  massset.f  readdata.f  readfrag.f  readsigns.f
src/frequencies/: CMakeLists.txt  freq.f  project.f
src/gdma-2.2.03/: Makefile_Stone  README  mulfit-2.1.tgz
src/gdma-2.2.03/examples/: diff.pl  run.tests
src/gdma-2.2.03/examples/C2H4/G03/: C2H4-g03.fchk  C2H4.punch  C2H4.punch.check  data  out  out.check
src/gdma-2.2.03/examples/C2H4/G94/: C2H4-g94.fchk  C2H4.punch  C2H4.punch.check  data  out  out.check
src/gdma-2.2.03/examples/C2H4/G98/: C2H4-g98.fchk  C2H4.punch  C2H4.punch.check  data  out  out.check
src/gdma-2.2.03/examples/CO/G03/: CO-g03.fchk  CO.punch  data  out  out.check
src/gdma-2.2.03/examples/H2O/: H2O.fchk  H2O.punch  H2O.punch.check  data  out  out.check
src/gdma-2.2.03/examples/formamide/: B3LYP_cc-pVTZ.fchk  B3LYP_cc-pVTZ.punch  B3LYP_cc-pVTZ.punch.check  data  out  out.check
src/gdma-2.2.03/src/: CMakeLists.txt  Makefile_Stone  atom_grids.f90  atom_grids.mod  dma.f90  dma.mod  gdma  gdma.f90  input.F90  input.mod  timing.mod
src/miscellaneousprograms/: ABNBderivatives.f  CMakeLists.txt  PAA.f  Stonepunch2cart_Matt.f  adjustcaponly.f  allocinput.f  angle.f  bond.f  combineallderivatives.f  convert2dalton.f  convertcoords4games.f  convertgamhessian.f  dihedral.f  distinctlabels.f  findHandCbonds_VdW.f  gamstone2cart.f  makeIN_CONSTRAINTS.f  newHatom.f  orderlist.f  setprocs.f  updatehessian.f
src/preparegeom/: AtomicData.f90  CMakeLists.txt  adjustsingle.f  anum2elneg.f  assignbyelect.f  bondlimits.f  elements.f  functions.f  indexi.f  indexx.f  specgrp.f
src/solventcharges/: CMakeLists.txt  fractdata.f90  main.f  readin_big.f  solcharges.f
(+39 files in other folders)
