add_subdirectory(Atommoments)
add_subdirectory(DipoleDerivatives)
add_subdirectory(Dispersion)
add_subdirectory(Doublecount)
add_subdirectory(Electro_Mac)
add_subdirectory(Induction_Mac)
add_subdirectory(L1L1_smfa)
add_subdirectory(RogerOptimiser)
add_subdirectory(SolAccSurf)
add_subdirectory(cutbonds)
add_subdirectory(derivatives_vard)
add_subdirectory(frequencies)
add_subdirectory(gdma-2.2.03)
add_subdirectory(miscellaneousprograms)
add_subdirectory(preparegeom)
add_subdirectory(solventcharges)
